update: dashboard view & swagger docs
