# public/docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
-        "/e-statements": {
+        "/e-statement": {
             "get": {
                 "description": "Retrieve a list of all e-statements with pagination",
                 "consumes": [
@@ -77,7 +77,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/e-statement/scan": {
             "post": {
                 "description": "Scan an e-statement and return the result",
                 "consumes": [
@@ -133,7 +135,7 @@
                 }
             }
         },
-        "/e-statements/{id}/summary": {
+        "/e-statement/{id}/summary": {
             "get": {
                 "description": "Get an e-statement summary",
                 "consumes": [
@@ -1285,11 +1287,8 @@
             }
         }
     },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "omniscan-api-token",
-            "in": "header"
-        }
+    "externalDocs": {
+        "description": "OpenAPI Specification",
+        "url": "https://swagger.io/specification/"
     }
 }
